# agent-development-kit-crash-course

./: .gitignore  README.md  pyproject.toml
2-tool-agent/tool_agent/: agent.py
3-litellm-agent/dad_joke_agent/: agent.py
4-structured-outputs/email_agent/: agent.py
5-sessions-and-state/: basic_stateful_session.py
6-persistent-storage/memory_agent/: agent.py
7-multi-agent/: ONBOARDING.md
